# Autodock4.lga.MPI

./: AUTHORS  ChangeLog  NEWS  README
*cc and *h files/: analysis.cc  analysis.h  atom_parameter_manager.cc  atom_parameter_manager.h  autocomm.h  autoglobal.h  banner.cc  banner.h  bestpdb.cc  bestpdb.h  calculateEnergies.cc  calculateEnergies.h  call_glss.cc  call_glss.h  call_gs.cc  call_ls.cc  changeState.cc  changeState.h  check_header_float.cc  check_header_float.h  check_header_int.cc  check_header_int.h  check_header_line.cc  check_header_line.h  clmode.cc  clmode.h  cluster_analysis.cc  cluster_analysis.h  cnv_state_to_coords.cc  cnv_state_to_coords.h  coliny.cc  coliny.h  com.cc  conformation_sampler.cc  conformation_sampler.h  constants.h  default_parameters.h  distdepdiel.cc  distdepdiel.h  dpftoken.h  (+144 more)
Parameter files/: configure.ac  paramdat2h.csh  roland_last_modif.txt  t_filter_read.c
configure:compile/: HHconfigure.csh  HHconfigure2.csh  config.status  configure  configure_franklin2.csh  configure_jaguar.csh  configure_moldyn.csh  configure_newton.csh
configure:compile/MKfile/: #Makefile#  Makefile  Makefile.am  Makefile.in  Makefile.orig  Makefile_with_wall  Makefile~  readme.txt
pre-docking/: README  make_binary  pre-docking.csh
pre-docking/MKbinary/: make_binary_malloc.cc  make_binary_static.cc
